# tnltk

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  DESCRIPTION.md  README.rst  pyproject.toml  setup.py
_build/doctrees/: quickstart.doctree
_build/doctrees/source/_features/: normalization.doctree
_build/html/: index.html  search.html
_build/html/_sources/: quickstart.rst.txt
data/: non_breaking_prefixes_tr.txt
docs/: conf.py  index.rst  quickstart.rst
docs/source/: conf.py  index.rst
docs/source/_features/: deasciifier.rst  normalization.md  sentence_splitter.md  sentence_splitter.rst
docs/source/_package/: normalizer.rst  sentence_splitter.rst
docs/source/_templates/: ISSUES_TEMPLATE.rst  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.rst
examples/deasciifier/: deasciify_method.ipynb  method_deasciify.ipynb
examples/normalizer/: methods.ipynb  normalization_methods.ipynb
examples/sentence_splitter/: split_sentences_method.ipynb
resources/: README.rst  TR_known_words_lexicon.txt  TR_non_breaking_prefixes.txt
source/: index.rst
tests/: deneme.ipynb  test_deasciifier.py  test_normalizer.py  test_sentence_splitter.py
tnltk/: __init__.py
tnltk/normalizer/: __init__.py  _builtin.py  _normalizer_builtin.py  deasciifier.py  normalizer.py
tnltk/sentence_splitter/: README.rst  sentence_splitter.py
